--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,14 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.2.3",
+    "numpy<2.0",
     "pandas>=2.2.3",
     "matplotlib>=3.10.0",
+    "nilearn>=0.11.1",
+    "setuptools>=78.1.0",
+    "tedana>=23.0.2",
+    "bokeh<3.4.0",
+    "nipype>=1.10.0",
 ]
 
 [dependency-groups]
@@ -44,3 +49,6 @@ testpaths=['tests']
 exclude = ['.venv']
 venvPath = '.'
 venv = '.venv'
+
+[tool.uv]
+cache-dir = "/scratch/users/logben/.uv_cache"
