--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "tedana>=23.0.2",
     "bokeh<3.4.0",
     "nipype>=1.10.0",
+    "seaborn>=0.13.2",
 ]
 
 [dependency-groups]
