--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "bokeh<3.4.0",
     "nipype>=1.10.0",
     "seaborn>=0.13.2",
+    "templateflow>=24.2.2",
 ]
 
 [dependency-groups]
