feat(add): Added script to find number of feedback breaks, created events files for validation

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ __pycache__/
 .Trashes
 ehthumbs.db
 Thumbs.d
+
+# output
+output_lev1_mni_no_ted_comp/
+
+# quality control outputs
+quality_control/
+!src/discovery_wm/quality_control/
